admin page title

--- a/app/Resources/views/adminLocalNew.html.twig
+++ b/app/Resources/views/adminLocalNew.html.twig
@@ -1,5 +1,9 @@
 {% extends "::adminNew.html.twig" %}
 
+{% block title %}
+    GC{{ center.name }} - Admin
+{% endblock %}
+
 {% set local = true %}
 
 {% block header_logo %}
