image filter for allSunday

--- a/src/gospelcenter/CelebrationBundle/Resources/views/Celebration/list.html.twig
+++ b/src/gospelcenter/CelebrationBundle/Resources/views/Celebration/list.html.twig
@@ -16,7 +16,16 @@
 {% block body %}
     <h1 class="titlePage"><span>{{ 'gc.title.celebrations'|trans }}</span></h1>
 
-    <section class="allSunday">
+    {% set customImg = 'bundles/gospelcentercelebration/images/allSunday.jpg' %}
+
+    <section class="allSunday"
+             style="background-image: url('{{ customImg| imagine_filter('slide_small_low') }}')"
+             data-bg="{{ customImg| imagine_filter('slide_small') }}"
+             data-bg_2x="{{ customImg| imagine_filter('slide_small_2x') }}"
+             data-bg_tablet="{{ customImg| imagine_filter('slide_small_tablet') }}"
+             data-bg_tablet_2x="{{ customImg| imagine_filter('slide_small_tablet_2x') }}"
+             data-bg_mobile="{{ customImg| imagine_filter('slide_small_mobile') }}"
+             data-bg_mobile_2x="{{ customImg| imagine_filter('slide_small_mobile_2x') }}">
         <h2>{% if center.ref == 'lausanne' %}{{ 'gc.celebration.allSunday.lausanne'|trans|nl2br }}{% elseif center.ref == 'annecy' %}{{ 'gc.celebration.allSunday.annecy'|trans|nl2br }}{% elseif center.ref == 'montreux' %}{{ 'gc.celebration.allSunday.montreux'|trans|nl2br }}{% endif %}</h2>
     </section>
 
