--- a/web/sass/advanced/_celebrations.scss
+++ b/web/sass/advanced/_celebrations.scss
@@ -2,7 +2,7 @@
 
     section.allSunday {
         width: 100%;
-        background: $grayLightGC url('../../images/slide_allSunday.jpg') no-repeat center center;
+        background: $grayLightGC no-repeat center center;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
