--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
@@ -357,7 +357,7 @@
         <p>Cet album a été enregistré lors de la conférence de l’AIMG à Lausanne en 2011. C'est le fruit de moments
             d'adoration authentiques vécus lors de cet événement. Les titres sont chantés en français et en anglais.</p>
 
-        <a target="_blank" href="http://www.gospel-diffusion.com/index.php/musique/gospel_center_band_i_am_free_je_suis_libre_2116.html">Acheter cet album</a>
+        <p><a target="_blank" href="http://www.gospel-diffusion.com/index.php/musique/gospel_center_band_i_am_free_je_suis_libre_2116.html">Acheter cet album</a></p>
 
     </article>
 
