--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
@@ -124,7 +124,8 @@
         {% spaceless %}
 
             <article class="people">
-                <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/MarcGallay.jpg') }}"
+                <img class="radius round"
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/MarcGallay.jpg') }}"
                      alt="Marc Gallay"/>
                 <section>
                     <h1>Marc et Christine Gallay</h1>
@@ -135,7 +136,8 @@
             </article>
 
             <article class="people">
-                <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/Jean-PhilippeBaertschi.jpg') }}"
+                <img class="radius round"
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/Jean-PhilippeBaertschi.jpg') }}"
                      alt="Jean-Philippe Bärtschi"/>
                 <section>
                     <h1>Jean-Philippe Bärtschi</h1>
@@ -145,7 +147,8 @@
             </article>
 
             <article class="people">
-                <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/PatrickBigler.jpg') }}"
+                <img class="radius round"
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/PatrickBigler.jpg') }}"
                      alt="Patrick Bigler"/>
                 <section>
                     <h1>Patrick Bigler</h1>
@@ -155,7 +158,8 @@
             </article>
 
             <article class="people">
-                <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/AlixBingle.jpg') }}"
+                <img class="radius round"
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/AlixBingle.jpg') }}"
                      alt="Alix Bingle"/>
                 <section>
                     <h1>Alix Bingle</h1>
@@ -165,7 +169,8 @@
             </article>
 
             <article class="people">
-                <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/MarcRapelli.jpg') }}"
+                <img class="radius round"
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/MarcRapelli.jpg') }}"
                      alt="Marc Rapelli"/>
                 <section>
                     <h1>Marc Rapelli</h1>
@@ -175,7 +180,8 @@
             </article>
 
             <article class="people">
-                <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/TimotheeRochat.jpg') }}"
+                <img class="radius round"
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/TimotheeRochat.jpg') }}"
                      alt="Timothée Rochat"/>
                 <section>
                     <h1>Timothée Rochat</h1>
@@ -357,7 +363,9 @@
         <p>Cet album a été enregistré lors de la conférence de l’AIMG à Lausanne en 2011. C'est le fruit de moments
             d'adoration authentiques vécus lors de cet événement. Les titres sont chantés en français et en anglais.</p>
 
-        <p><a target="_blank" href="http://www.gospel-diffusion.com/index.php/musique/gospel_center_band_i_am_free_je_suis_libre_2116.html">Acheter cet album</a></p>
+        <p><a target="_blank"
+              href="http://www.gospel-diffusion.com/index.php/musique/gospel_center_band_i_am_free_je_suis_libre_2116.html">Acheter
+                cet album</a></p>
 
     </article>
 
