translation for Lausanne

--- a/app/Resources/views/ruban_nav.html.twig
+++ b/app/Resources/views/ruban_nav.html.twig
@@ -25,8 +25,8 @@
     <ul>
         <li><a target="_blank" href="http://gospel-wave.org/">Gospel Wave</a></li>
         {#<li><a target="_blank" href="http://gcj.ch/">Gospel Center Jura</a></li>#}
-        <li><a target="_blank" href="http://www.ee-oron.ch/">Eglise évangélique d'Oron</a></li>
-        <li><a target="_blank" href="http://www.laguerison.org/">AIMG</a></li>
+        <li><a target="_blank" href="http://www.ee-oron.ch/">{{ 'gc.ruban.eeo'|trans }}</a></li>
+        <li><a target="_blank" href="http://www.laguerison.org/">{{ 'gc.ruban.iahm'|trans }}</a></li>
         <li><a target="_blank" href="http://www.gospel-diffusion.com">Gospel Diffusion</a></li>
     </ul>
 </nav>
