--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
@@ -182,8 +182,8 @@
 
     <article class="tab default" id="staff">
 
-        <h2 class="slogan">The staff in Gospel Center Lausanne is a dynamique team that wishes to accomplish a work of
-            good quality.</h2>
+        <h2 class="slogan">The staff of the Gospel Center Lausanne is a dynamic team that puts effort towards quality
+            work.</h2>
 
         <article class="frame">
             <h1>Pastoral Team</h1>
@@ -218,7 +218,7 @@
         </article>
 
         <article class="frame">
-            <h1>Technique</h1>
+            <h1>Technic</h1>
 
             <p>David van der Maas</p>
 
@@ -299,44 +299,41 @@
 
     <article class="tab blog-style" id="music">
 
-        <h1>Une musique centrée sur Jésus</h1>
+        <h1>Music focused on Jesus</h1>
 
-        {% set believeImg = 'bundles/gospelcenterpage/images/confession.jpg' %}
+        {% set musicImg = 'bundles/gospelcenterpage/images/musique_lausanne.jpg' %}
 
         <img class="big"
-             src="{{ asset(believeImg)| imagine_filter('blog_big_low') }}"
-             srcset="{{ asset(believeImg)| imagine_filter('blog_big_low') }} 2x"
-             data-img="{{ asset(believeImg)| imagine_filter('blog_big') }}"
-             data-img_2x="{{ asset(believeImg)| imagine_filter('blog_big_2x') }}"
-             data-img_tablet="{{ asset(believeImg)| imagine_filter('blog_big_tablet') }}"
-             data-img_tablet_2x="{{ asset(believeImg)| imagine_filter('blog_big_tablet_2x') }}"
-             data-img_mobile="{{ asset(believeImg)| imagine_filter('blog_big_mobile') }}"
-             data-img_mobile_2x="{{ asset(believeImg)| imagine_filter('blog_big_mobile_2x') }}">
+             src="{{ asset(musicImg)| imagine_filter('blog_big_low') }}"
+             srcset="{{ asset(musicImg)| imagine_filter('blog_big_low') }} 2x"
+             data-img="{{ asset(musicImg)| imagine_filter('blog_big') }}"
+             data-img_2x="{{ asset(musicImg)| imagine_filter('blog_big_2x') }}"
+             data-img_tablet="{{ asset(musicImg)| imagine_filter('blog_big_tablet') }}"
+             data-img_tablet_2x="{{ asset(musicImg)| imagine_filter('blog_big_tablet_2x') }}"
+             data-img_mobile="{{ asset(musicImg)| imagine_filter('blog_big_mobile') }}"
+             data-img_mobile_2x="{{ asset(musicImg)| imagine_filter('blog_big_mobile_2x') }}">
 
-        <p>Nous croyons à l’importance et à la place centrale de la musique dans la vie de l’Eglise. La louange, dans un
-            style actuel et moderne, mais avant tout centrée sur Jésus, est donc naturellement une part essentielle de
-            nos célébrations.</p>
+        <p>We believe in the importance and the key role of music in the Church. Worship in a modern style and focused
+            on Jesus is an essential part of our celebrations.</p>
 
-        <p>Nous voulons permettre à chacun de rencontrer Dieu en le louant, et laisser Dieu se manifester en lui
-            laissant la place pour agir. Nous avons le désir de voir le ciel ouvert, les vies transformées et les
-            maladies guéries dans la présence tangible de Dieu. L’excellence, la consécration à Dieu, l’écoute du
-            Saint-Esprit et le service sont les valeurs que nous mettons au centre du secteur louange. Notre vision est
-            également de former des musiciens, chanteurs et techniciens au ministère de la louange, leur transmettre ce
-            que Dieu nous a donné depuis des années, et les équiper pour servir.</p>
+        <p>We want to allow each one to meet God through worship and allow Him to manifest Himself as we give Him space
+            to move. We desire to see an open heaven, lives transformed and sickness healed in the tangible presence of
+            God. The values we focus on in our worship teams are excellence, dedication to God, listening to the Holy
+            Spirit and service. Our vision is also to train musicians, singers and technicians in worship ministry, and
+            share with them what God has given us for years as well as equip them for service.</p>
 
-        <p>Nos différents groupes sont régulièrement invités à conduire la louange dans divers événements en Suisse et
-            en Europe. De nombreux musiciens servant au Gospel Center Lausanne jouent également dans divers groupes en
-            dehors de l’Eglise. Le Gospel Center Lausanne encourage les musiciens dans leurs dons où qu’ils aillent.
-            Nous voulons créer une plateforme où ils se sentent bien et peuvent se développer dans leur plein
-            potentiel.</p>
+        <p>Our different groups are invited on a regular basis to lead worship in various events in Switzerland and in
+            Europe. Many musicians serving in the Gospel Center Lausanne also play in other groups outside of church.
+            The Gospel Center Lausanne encourages musicians in their gifts wherever they go. We want to create a
+            platform where they feel good and can develop themselves in their full potential.</p>
 
-        <p>Conduire la musique dans l’Eglise est notre plus grand privilège, nous croyons que de grandes choses sont
-            devant nous ! Le meilleur est à venir !</p>
+        <p>Leading music in the church is our greatest privileged; we believe great things are ahead of us ! The best is
+            yet to come !</p>
 
         <article class="frame">
             <h1>Gaël Dufour</h1>
 
-            <p>Responsable louange</p>
+            <p>Head of Worship</p>
 
             <p><a href="mailto:worship@gc-lausanne.org">worship@gc-lausanne.org</a></p>
         </article>
@@ -345,12 +342,13 @@
 
         <h3>I am free / Je suis libre</h3>
 
-        <p>Cet album a été enregistré lors de la conférence de l’AIMG à Lausanne en 2011. C'est le fruit de moments
-            d'adoration authentiques vécus lors de cet événement. Les titres sont chantés en français et en anglais.</p>
+        <p>This album was recorded live during the IAHM (International Association of Healing Ministries) conference in
+            Lausanne in 2011. It is the fruit of true worship moments we experienced during this event. Those songs are
+            sung in both French and English.</p>
 
         <a target="_blank"
-           href="http://www.gospel-diffusion.com/index.php/musique/gospel_center_band_i_am_free_je_suis_libre_2116.html">Acheter
-            cet album</a>
+           href="http://www.gospel-diffusion.com/index.php/musique/gospel_center_band_i_am_free_je_suis_libre_2116.html">Buy
+            this album</a>
 
 
     </article>
