--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/youth.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/youth.html.twig
@@ -7,35 +7,35 @@
                     <a href="#minis" class="current focus">
                         <h1>Minis</h1>
 
-                        <h2>pré-scolaire</h2>
+                        <h2>Preschool</h2>
                     </a>
                 </li>
                 <li>
                     <a href="#kids">
                         <h1>Kids</h1>
 
-                        <h2>4-7 ans</h2>
+                        <h2>4-7 years old</h2>
                     </a>
                 </li>
                 <li>
                     <a href="#teens">
                         <h1>Teens</h1>
 
-                        <h2>7-13 ans</h2>
+                        <h2>7-13 years old</h2>
                     </a>
                 </li>
                 <li>
                     <a href="#full-pack">
                         <h1>Full Pack</h1>
 
-                        <h2>0-12 ans</h2>
+                        <h2>0-12 years old</h2>
                     </a>
                 </li>
                 <li>
                     <a href="#youth">
                         <h1>Gospel Youth</h1>
 
-                        <h2>13-20 ans</h2>
+                        <h2>13-20 years old</h2>
                     </a>
                 </li>
             </ul>
@@ -61,13 +61,14 @@
 
         <h2 class="underline"><span>Minicell'</span></h2>
 
-        <p>Programme d’éveil à la foi pour les tout-petits donné par une équipe d’animatrices motivées ! Chaque
-            dimanche, après la louange, un des parents accompagne son enfant dans le groupe et reste environ 15 minutes
-            pour vivre ce temps avec lui. Un moment ludique, chaleureux, qui encourage ces juniors à entrer dans une
-            relation tout en douceur avec Dieu ! Que ce soit au travers de petites chansons, de découvertes visuelles et
-            tactiles, le programme Minicell’ est un rendez-vous privilégié à ne pas manquer !</p>
+        <p>Faith-awakening programme for toddlers given by motivated leaders! Every Sunday, after worship, one of the
+            parent accompany the child to this group and stay for roughly 15mn to experience this time together. A fun
+            and friendly time meant to encourage toddlers to enter gently into a relationship with God! May it be
+            through songs, visual and tactile discoveries, this Minicell’ programme is a unique place not to miss!</p>
 
         <h2 class="underline"><span>Garderie</span></h2>
+
+        <h3>The English version will come soon.</h3>
 
         <p>La garderie prend le relais à la suite de l’activité Minicell !</p>
 
@@ -93,13 +94,12 @@
              data-img_mobile_2x="{{ asset(customImg)| imagine_filter('blog_big_mobile_2x') }}">
 
 
-        <p>Dieu n’est pas qu’une affaire d’adultes, bien au contraire ! Et c’est ce que chaque enfant pourra découvrir
-            chaque semaine !</p>
+        <p>God is not for adults only, on the contrary! And that’s exactly what each child will find out every week!</p>
 
-        <p>Accompagnés par des responsables dynamiques, les enfants découvriront des histoires de la Bible
-            passionnantes, se feront des amis et pourront faire des jeux et des bricolages.</p>
+        <p>Accompanied by dynamic leaders, those children will discover fascinating Bible stories, will make friends and
+            can play games and make crafts.</p>
 
-        <p>Parce que les enfants sont l'Eglise d'aujourd’hui!</p>
+        <p>Because children are the Church of today!</p>
 
     </article>
 
@@ -118,6 +118,8 @@
              data-img_tablet_2x="{{ asset(customImg)| imagine_filter('blog_big_tablet_2x') }}"
              data-img_mobile="{{ asset(customImg)| imagine_filter('blog_big_mobile') }}"
              data-img_mobile_2x="{{ asset(customImg)| imagine_filter('blog_big_mobile_2x') }}">
+
+        <h3>The English version will come soon.</h3>
 
         <p>Les Teens, c’est l’endroit à ne pas manquer pour les jeunes de la 5ème à la 8ème Harmos. Expérimenter la
             présence et la puissance de Dieu, vivre des moments de défis, connaître l’amour de Dieu et développer de
@@ -145,14 +147,14 @@
              data-img_mobile="{{ asset(customImg)| imagine_filter('blog_big_mobile') }}"
              data-img_mobile_2x="{{ asset(customImg)| imagine_filter('blog_big_mobile_2x') }}">
 
-        <h2 class="underline"><span>Une célébration de A à Z</span></h2>
+        <h2 class="underline"><span>A complete celebration</span></h2>
 
-        <p>LOUANGE, SKETCH, ANIMATION, COLLATION et pleins d'autres surprises encore !</p>
+        <p>PRAISE, SKETCH, ANIMATION, SNACK and many more surprises!</p>
 
-        <p>Une équipe de jeunes motivés est à l’œuvre pour concocter un programme délirant qui motivera vos enfants et
-            les aidera à bien commencer la semaine!</p>
+        <p>A team of motivated youths are working hard to prepare a crazy programme that will motivate your children and
+            will help them start the week well!</p>
 
-        <p>Chaque dernier dimanche du mois à 18h00 (sauf exceptions).</p>
+        <p>Every last Sunday of the month at 6pm (with exceptions).</p>
 
     </article>
 
@@ -172,6 +174,8 @@
              data-img_tablet_2x="{{ asset(customImg)| imagine_filter('blog_big_tablet_2x') }}"
              data-img_mobile="{{ asset(customImg)| imagine_filter('blog_big_mobile') }}"
              data-img_mobile_2x="{{ asset(customImg)| imagine_filter('blog_big_mobile_2x') }}">
+
+        <h3>The English version will come soon.</h3>
 
         <p>Reste connecté sur facebook et branché à ton whats’app pour être informé des soirées et events du Gospel
             Youth ! Dès 13 ans, vendredi ou samedi, de 19h30 à 21h30, à Provence 4, au bowling ou au McDo, le Gospel
