static page of Annecy

--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/annecy/fr/youth.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/annecy/fr/youth.html.twig
@@ -61,11 +61,11 @@
 
         <h2 class="underline"><span>Minicell'</span></h2>
 
-        <p>Programme d’éveil à la foi pour les tout-petits donné par une équipe d’animatrices motivées ! Chaque
-            dimanche, après la louange, un des parents accompagne son enfant dans le groupe et reste environ 15 minutes
-            pour vivre ce temps avec lui. Un moment ludique, chaleureux, qui encourage ces juniors à entrer dans une
-            relation tout en douceur avec Dieu ! Que ce soit au travers de petites chansons, de découvertes visuelles et
-            tactiles, le programme Minicell’ est un rendez-vous privilégié à ne pas manquer !</p>
+        <p>Programme d’éveil à la foi pour les touts petits donné par toute une équipe d’animatrices motivées ! Chaque
+            dimanche, après la louange, un des parents accompagne son enfant dans le groupe et reste environ 15mn pour
+            vivre ce temps avec lui. Un moment ludique, chaleureux, qui encourage ces juniors à entrer dans une relation
+            toute en douceur avec Dieu ! Que ce soit au travers de petites chansons, de découvertes visuelles et
+            tactiles, un rendez-vous privilégié à ne pas manquer !</p>
 
         <h2 class="underline"><span>Garderie</span></h2>
 
@@ -96,10 +96,10 @@
         <p>Dieu n’est pas qu’une affaire d’adultes, bien au contraire ! Et c’est ce que chaque enfant pourra découvrir
             chaque semaine !</p>
 
-        <p>Accompagnés par des responsables dynamiques, les enfants découvriront des histoires de la Bible
-            passionnantes, se feront des amis et pourront faire des jeux et des bricolages.</p>
+        <p>Accompagnés par des responsables dynamiques, ce sont des histoires de la Bible passionnantes qu’ils
+            découvriront, des bricolages, des jeux, des supers amitiés !</p>
 
-        <p>Parce que les enfants sont l'Eglise d'aujourd’hui!</p>
+        <p>Parce que les enfants sont l'église d'aujourd’hui!</p>
 
     </article>
 
@@ -119,13 +119,11 @@
              data-img_mobile="{{ asset(customImg)| imagine_filter('blog_big_mobile') }}"
              data-img_mobile_2x="{{ asset(customImg)| imagine_filter('blog_big_mobile_2x') }}">
 
-        <p>Les Teens, c’est l’endroit à ne pas manquer pour les jeunes de la 5ème à la 8ème Harmos. Expérimenter la
-            présence et la puissance de Dieu, vivre des moments de défis, connaître l’amour de Dieu et développer de
-            nouvelles amitiés sont des points clés pour cette équipe.</p>
+        <p>Nous désirons que chaque enfant entre la 5 et 8ème H expérimente la présence et la puissance de Dieu !</p>
 
-        <p>Tout nouveau tout chaud, les teens c’est aussi « Out of the Box ». Un concept innovant qui a lieu une fois
-            par mois. Out of the Box, c’est sortir de sa boîte et de sa zone de confort avec un orateur du Gospel Center
-            qui vient partager son cœur et challenger cette jeune génération.</p>
+        <p>Comprendre l’amour de Dieu, l’autorité que nous avons en Lui et Sa vision pour notre vie sont des réalités à
+            découvrir au travers des messages, des temps de prière, des moments fun, des rires et des amitiés ! Si tu
+            aimes les défis, tu ne seras pas déçu(e) ! On se réjouit de te voir aux WARRIORS</p>
 
     </article>
 
@@ -147,12 +145,12 @@
 
         <h2 class="underline"><span>Une célébration de A à Z</span></h2>
 
-        <p>LOUANGE, SKETCH, ANIMATION, COLLATION et pleins d'autres surprises encore !</p>
+        <p>LOUANGE * SKETCH * ANIMATION * COLLATION et pleins d'autres surprises encore !</p>
 
-        <p>Une équipe de jeunes motivés est à l’œuvre pour concocter un programme délirant qui motivera vos enfants et
-            les aidera à bien commencer la semaine!</p>
+        <p>Une équipe de jeunes motivés est à l’œuvre pour concocter un programme délirant qui fera sortir vos enfants
+            du lit sans souci !</p>
 
-        <p>Chaque dernier dimanche du mois à 18h00 (sauf exceptions).</p>
+        <p>Chaque dernier dimanche du mois à 18h00</p>
 
     </article>
 
@@ -173,20 +171,25 @@
              data-img_mobile="{{ asset(customImg)| imagine_filter('blog_big_mobile') }}"
              data-img_mobile_2x="{{ asset(customImg)| imagine_filter('blog_big_mobile_2x') }}">
 
-        <p>Reste connecté sur facebook et branché à ton whats’app pour être informé des soirées et events du Gospel
-            Youth ! Dès 13 ans, vendredi ou samedi, de 19h30 à 21h30, à Provence 4, au bowling ou au McDo, le Gospel
-            Youth fait peau neuve et n’attend plus que toi !</p>
+        <p>Tous les vendredis soirs</p>
 
-        <p>Du fun, des moments de partages, des délires, la présence de Dieu et de la bonne louange seront au menu de
-            ces folles soirées ! Notre rêve est de faire la différence dans ce monde en suivant l’exemple de Jésus,
-            c’est le tien aussi ? Alors connecte-toi !</p>
+        <p>Soirée à 19:30</p>
+
+        <p>After dès 21:30</p>
+
+        <p>Le Gospel Youth Lausanne c'est le groupe de jeunes du Gospel Center Lausanne. On est des jeunes de 13 ans à
+            20 ans qui voulons découvrir des choses nouvelles et avancer dans notre relation avec Dieu. On se retrouve
+            tous les vendredis soirs dès 19h30 dans les locaux du Gospel Center à Provence 4 à Lausanne. Passionnés,
+            créatifs, et motivés, notre désir est de faire la différence dans ce monde en suivant l'exemple de
+            Jésus!</p>
 
         <article class="frame">
             <h1>Plus d'infos</h1>
 
             <p>sur notre page facebook</p>
 
-            <p><a href="https://facebook.com/gylausanne" target="_blank">facebook/GYLausanne</a></p>
+            <p><a href="https://www.facebook.com/GospelCenterAnnecyYouth" target="_blank">facebook.com/GospelCenterAnnecyYouth</a>
+            </p>
         </article>
 
     </article>
