--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/youth.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/youth.html.twig
@@ -190,7 +190,7 @@
 
             <p>sur notre page facebook</p>
 
-            <p><a href="https://facebook.com/gylausanne" target="_blank">facebook/GYLausanne</a></p>
+            <p><a href="https://facebook.com/gylausanne" target="_blank">facebook.com/GYLausanne</a></p>
         </article>
 
     </article>
