--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/annecy/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/annecy/fr/about.html.twig
@@ -115,9 +115,7 @@
             <section>
                 <h1>Sandra et Julien Dubi</h1>
 
-                <p>Pasteurs</p>
-
-                <p>Membres du conseil de direction</p>
+                <p>Couple pastoral du Gospel Center Annecy</p>
             </section>
 
         </article>
@@ -153,43 +151,43 @@
         dynamique qui désire effectuer un travail de qualité.</h2>
 
     <article class="frame">
-        <h1>Coord. de l’équipe pastorale</h1>
+        <h1>équipe pastorale</h1>
 
         <p>Sandra Dubi</p>
     </article>
 
     <article class="frame">
-        <h1>Coord. des bases</h1>
+        <h1>Les bases</h1>
 
         <p>Julien Dubi</p>
     </article>
 
     <article class="frame">
-        <h1>Coord. de l’enfance</h1>
+        <h1>Enfance</h1>
 
         <p>Marie Béatrice Sciabbarrasi</p>
     </article>
 
     <article class="frame">
-        <h1>Coord. de la louange</h1>
+        <h1>Louange</h1>
 
         <p>Olivier Mussard</p>
     </article>
 
     <article class="frame">
-        <h1>Coord. de l’accueil</h1>
+        <h1>Accueil</h1>
 
         <p>Julie Mussard</p>
     </article>
 
     <article class="frame">
-        <h1>Coord. de Prayer Impact</h1>
+        <h1>Prayer Impact</h1>
 
         <p>Karine Nelzi</p>
     </article>
 
     <article class="frame">
-        <h1>Coord. de l’équipe SOZO</h1>
+        <h1>équipe SOZO</h1>
 
         <p>Sandra Dubi</p>
     </article>
