translation for Annecy

--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/annecy/en/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/annecy/en/about.html.twig
@@ -30,10 +30,10 @@
 <nav class="sub_nav">
     {% spaceless %}
         <ul class="classic">
-            <li><a href="#about" class="current focus">About</a></li>
-            <li><a href="#leadership">Leadership</a></li>
-            <li><a href="#staff">Staff</a></li>
-            <li><a href="#what-we-believe">Statement of Faith</a></li>
+            <li><a href="#about" class="current focus">{{ 'gc.page.about.nav.about'|trans }}</a></li>
+            <li><a href="#leadership">{{ 'gc.page.about.nav.leadership'|trans }}</a></li>
+            <li><a href="#staff">{{ 'gc.page.about.nav.staff'|trans }}</a></li>
+            <li><a href="#what-we-believe">{{ 'gc.page.about.nav.believe'|trans }}</a></li>
         </ul>
     {% endspaceless %}
 </nav>
@@ -54,51 +54,55 @@
          data-img_mobile="{{ asset(aboutImg)| imagine_filter('blog_big_mobile') }}"
          data-img_mobile_2x="{{ asset(aboutImg)| imagine_filter('blog_big_mobile_2x') }}">
 
+
     <h2 class="underline"><span>Qui</span></h2>
 
-    <p>Le Gospel Center Lausanne est membre du Réseau évangélique suisse (<a target="_blank"
-                                                                             href="http://www.evangelique.ch">RES</a>),
-        et de la Fédération romande des Églises
-        évangéliques (<a target="_blank" href="http://www.lafree.ch">FREE</a>).</p>
+    <p>Le Gospel Center Annecy est partenaire de la Fédération romande des Églises évangéliques (<a target="_blank"
+                                                                                                    href="http://www.lafree.ch">FREE</a>)
+        en Suisse et dépend du mouvement <a target="_blank" href="http://www.gospel-wave.org">Gospel Wave</a>.</p>
+
 
     <h2 class="underline"><span>Comment</span></h2>
 
-    <p>Le Gospel Center a le désir de vivre l’évangile de la façon la plus complète possible, y compris dans la
+    <p>Le Gospel Center a le désir de vivre l’Evangile de la façon la plus complète possible, y compris dans la
         dimension de la guérison divine et du miraculeux.</p>
 
-    <p>Le Gospel Center a comme vision de communiquer avec des moyens modernes qui rejoignent les personnes dans leur
+    <p>Le Gospel Center a comme vision de communiquer avec des moyens modernes qui rejoignent les personnes dans
+        leur
         réalité. Les médias, l’audiovisuel, ainsi que les activités mises en place poursuivent ce but.</p>
 
-    <p>Nous sommes convaincus de l’importance de la diversité des façons de vivre la foi et de la richesse qu’apportent
-        les simples moments de vie partagés. Les célébrations du dimanche soir ne sont qu’une facette de la vie
+    <p>Nous sommes convaincus de l’importance de la diversité des façons de vivre la foi et de la richesse
+        qu’apportent
+        les simples moments de vie partagés. Les célébrations du dimanche ne sont qu’une facette de la vie
         chrétienne.</p>
 
     <h2 class="underline"><span>Pourquoi</span></h2>
 
-    <p>Le Gospel Center existe dans le but de stimuler, développer et faire découvrir un mode de vie positif, pratique,
-        puissant, basé sur Jésus au travers de la Bible. Nous croyons que la vie d’un chrétien ne s’arrête pas aux
-        dimanches mais se vit aussi le reste de la semaine dans des activités diverses, dans nos lieux de vie respectifs
-        comme dans les programmes offerts par l’église.</p>
+    <p>Le Gospel Center existe dans le but de stimuler, développer et faire découvrir un mode de vie positif,
+        pratique, puissant, fondé sur Jésus au travers de la Bible. Nous croyons que la vie d’un chrétien ne
+        s’arrête pas aux dimanches ou aux programmes offerts par l’église mais se vit aussi le reste de la semaine
+        dans des activités diverses, dans nos lieux de vie respectifs et nos lieux de travail.</p>
 
-    <p>Le Gospel Center souhaite offrir un espace où la dimension de la communion fraternelle est un élément central. Un
-        espace où la foi de chacun peut grandir de manière saine et équilibrée, aussi bien dans la dimension du faire
-        que de l’être. Nous souhaitons voir Dieu agir au travers de miracles, de guérisons et de vies transformées.</p>
+    <p>Le Gospel Center souhaite offrir un espace où la dimension de la communion fraternelle est un élément
+        central. Un espace où la foi de chacun peut grandir de manière saine et équilibrée, aussi bien dans la
+        dimension du faire que de l’être. Nous souhaitons voir Dieu agir au travers de miracles, de guérisons et de
+        vies transformées.</p>
 
     <h2 class="underline"><span>Structure</span></h2>
 
-    <p>Le Gospel Center fonctionne pour et par ses « bases », qui sont le regroupement de 4 à 7 personnes par centre
-        d’intérêts. Le but est de proposer un lieu de taille accessible sur le plan relationnel où il est possible
-        d’avancer régulièrement et de manière personnelle dans sa maturité spirituelle. Les ”bases” mettent l’accent
-        aussi bien sur les moments de vie partagés (sport, sorties, activités culturelles, etc.) que sur les temps
-        d’échange autour de la Bible. Le Gospel Center veut offrir la possibilité à chaque personne de s’investir selon
-        ses capacités, son temps et sa motivation dans la vie de sa ”base” et par prolongement dans celle de
-        l’Eglise.</p>
+    <p>Le Gospel Center fonctionne pour et par ses « bases », qui sont le regroupement de 4 à 7 personnes par région
+        et centres d’intérêt. Le but est de proposer un lieu de taille accessible sur le plan relationnel où il est
+        possible d’avancer régulièrement et de manière personnelle dans sa maturité spirituelle. Les ”bases” mettent
+        l’accent aussi bien sur les moments de vie partagés (sport, sorties, activités culturelles, etc.) que sur
+        les temps d’échange autour de la Bible. Le Gospel Center veut offrir la possibilité à chaque personne de
+        s’investir selon ses capacités, son temps et sa motivation dans la vie de sa ”base” et par prolongement dans
+        ses diverses activités, dont la célébration du dimanche.</p>
 
     <h2 class="underline"><span>Finances</span></h2>
 
-    <p>Le Gospel Center Lausanne ne bénéficie d’aucun soutien de l’État. C’est une association à but non lucratif.
+    <p>Le Gospel Center Annecy ne bénéficie d’aucun soutien de l’État. C’est une association 1905 à but non lucratif.
         L’ensemble des frais de fonctionnement est assumé par l’engagement libre de chacun. Nos comptes sont approuvés
-        par l’Assemblée générale après vérification par une fiduciaire.</p>
+        par l’Assemblée générale après vérification par <a target="_blank" href="http://www.actes6.com">Actes6</a>.</p>
 
 </article>
 
@@ -109,149 +113,91 @@
         <article class="people">
             <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/MarcGallay.png') }}" alt="Marc Gallay"/>
             <section>
-                <h1>Marc Gallay</h1>
+                <h1>Sandra et Julien Dubi</h1>
 
-                <p>Pasteur</p>
-
-                <p>Membre du conseil de direction</p>
+                <p>Couple pastoral du Gospel Center Annecy</p>
             </section>
 
         </article>
 
         <article class="people">
-            <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/SimonMoser.png') }}" alt="Simon Moser"/>
+            <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/MarcGallay.png') }}" alt="Marc Gallay"/>
             <section>
-                <h1>Simon Moser</h1>
+                <h1>Julie et Olivier Mussard </h1>
 
-                <p>Membre du conseil de direction</p>
+                <p>Membres du conseil de direction</p>
             </section>
+
         </article>
 
         <article class="people">
-            <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/Pierre-AndreDinatale.png') }}"
-                 alt="Pierre-André Dinatale"/>
+            <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/MarcGallay.png') }}" alt="Marc Gallay"/>
             <section>
-                <h1>Pierre-André Dinatale</h1>
+                <h1>Elisabeth et Stéphane Potin</h1>
 
-                <p>Membre du conseil de direction</p>
+                <p>Membres du conseil de direction</p>
             </section>
+
         </article>
 
-        <article class="people">
-            <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/AlixBingle.png') }}" alt="Alix Bingle"/>
-            <section>
-                <h1>Alix Bingle</h1>
 
-                <p>Membre du conseil de direction</p>
-            </section>
-        </article>
-
-        <article class="people">
-            <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/PatrickBigler.png') }}" alt="Patrick Bigler"/>
-            <section>
-                <h1>Patrick Bigler</h1>
-
-                <p>Membre du conseil de direction</p>
-            </section>
-        </article>
     {% endspaceless %}
 
 </article>
 
 <article class="tab default" id="staff">
 
-    <h2 class="slogan">The staff of the Gospel Center Lausanne is a dynamic team that wishes to perform quality
-        work.</h2>
+    <h2 class="slogan">Le staff du Gospel Center Annecy est une équipe
+        dynamique qui désire effectuer un travail de qualité.</h2>
 
     <article class="frame">
-        <h1>Coord. de l'équipe pastorale</h1>
+        <h1>équipe pastorale</h1>
 
-        <p>Blaise Steffen</p>
+        <p>Sandra Dubi</p>
     </article>
 
     <article class="frame">
-        <h1>Coord. des Bases</h1>
+        <h1>Les bases</h1>
 
-        <p>Marc Gallay</p>
+        <p>Julien Dubi</p>
     </article>
 
     <article class="frame">
-        <h1>Gospel Center Band</h1>
+        <h1>Enfance</h1>
 
-        <p>Marc Gallay</p>
+        <p>Marie Béatrice Sciabbarrasi</p>
     </article>
 
     <article class="frame">
-        <h1>Technique son</h1>
+        <h1>Louange</h1>
 
-        <p>Marc Rapelli</p>
-    </article>
-
-    <article class="frame">
-        <h1>Responsable jeunesse</h1>
-
-        <p>Loïc Marsh</p>
-    </article>
-
-    <article class="frame">
-        <h1>Gospel Minis (0-3 ans)</h1>
-
-        <p>Laetitia Crelier</p>
-
-        <p>Fabienne Grisoni</p>
-    </article>
-
-    <article class="frame">
-        <h1>Gospel Kids (4-7 ans)</h1>
-
-        <p>Francine Gerber</p>
-    </article>
-
-    <article class="frame">
-        <h1>Gospel Teens (7-13 ans)</h1>
-
-        <p>Fiona Bland</p>
-    </article>
-
-    <article class="frame">
-        <h1>Gospel Youth</h1>
-
-        <p>Alix Bingle</p>
-
-        <p>Fiona Bland</p>
-    </article>
-
-    <article class="frame">
-        <h1>Technique visuelle</h1>
-
-        <p>Timothée Weiss</p>
+        <p>Olivier Mussard</p>
     </article>
 
     <article class="frame">
         <h1>Accueil</h1>
 
-        <p>Vincent Spycher</p>
-
-        <p>Héloïse Monod</p>
+        <p>Julie Mussard</p>
     </article>
 
     <article class="frame">
-        <h1>Resp. équipiers de prière</h1>
+        <h1>Prayer Impact</h1>
 
-        <p>Blaise Steffen</p>
+        <p>Karine Nelzi</p>
     </article>
 
     <article class="frame">
-        <h1>Resp. du bar</h1>
+        <h1>équipe SOZO</h1>
 
-        <p>Mireille Steffen</p>
+        <p>Sandra Dubi</p>
     </article>
+
 
 </article>
 
 <article class="tab blog-style" id="what-we-believe">
 
-    <h1>What we believe</h1>
+    <h1>Ce que nous croyons</h1>
 
     {% set believeImg = 'bundles/gospelcenterpage/images/confession.jpg' %}
 
